fixed spacing for consistency

--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: libre franklin;
-  color:rgb(46,66,99);
+  color: rgb(46,66,99);
   background-image: url(assets/bg.png);
   background-size: 200px;
 }
 
 main {
   min-width: 250px;
+  margin: 1rem auto;
 }
 
 ul {
@@ -27,8 +28,7 @@ ul li {
   margin: 0px 5px;
 }
 
-a, a:visited {
-  /*color: rgb(46,66,99);*/
+a, a: visited {
   color: #E7955D;
 }
 
@@ -45,6 +45,10 @@ h1 {
   font-size: 72pt;
 }
 
+h2, h3, h4, h5, h6 {
+  font-weight: bold;
+}
+
 /*vimeo embed*/
 iframe {
   border: none;
@@ -53,12 +57,17 @@ iframe {
 }
 
 .embed-container {
-    position: relative;
-    padding-bottom: 65%;
-    height: 0;
-    width: 70vw;
-    left: -10px;
-    bottom: 15px;
+  position: relative;
+  padding-bottom: 65%;
+  height: 0;
+  width: 70vw;
+  left: -10px;
+  bottom: 15px;
+}
+
+.vimeo-headings {
+  /*margin-top: 2rem;*/
+  margin-bottom: -1rem;
 }
 
 .embed-container iframe,
@@ -82,7 +91,7 @@ input {
 }
 @media screen and (max-width: 768) {
   #visdev {
-    width:70%;
+    width: 70%;
   }
 }
 @media screen and (max-width: 450) {
@@ -93,68 +102,68 @@ input {
 
 /*illustrations*/
 #visdev, #gallery {
-  align-items:center;
-  text-align:center;
-  width:100%;
-  margin:20px auto;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  margin: 20px auto;
   /*background: rgba(46,66,99,0.25);*/
 }
 .carousel {
-  max-width:90%;
-  padding:15px;
-  background:#fff;
-  border:2px solid rgba(46,66,99,0.5);
-  margin:0 auto 20px;
+  max-width: 90%;
+  padding: 15px;
+  background: #fff;
+  border: 2px solid rgba(46,66,99,0.5);
+  margin: 0 auto 20px;
 }
 .carousel-indicators li {
-  background:#bbb;
+  background: #bbb;
 }
 .carousel-indicators li.active {
-  background:rgb(220,105,94);
+  background: rgb(220,105,94);
 }
 .carousel-control-prev-icon {
-  background: transparent no-repeat center center url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23666' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-  margin-right:50px;
+  background: transparent no-repeat center center url("data: image/svg+xml;charset=utf8,%3Csvg xmlns='http: //www.w3.org/2000/svg' fill='%23666' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+  margin-right: 50px;
 }
 .carousel-control-next-icon {
-  background: transparent no-repeat center center url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23666' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-  margin-left:50px;
+  background: transparent no-repeat center center url("data: image/svg+xml;charset=utf8,%3Csvg xmlns='http: //www.w3.org/2000/svg' fill='%23666' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+  margin-left: 50px;
 }
 
 /*gallery*/
 .img-thumbnail {
-  max-width:30%;
-  padding:5px;
-  border:2px solid rgba(46,66,99,0.5);
-  margin:10px;
+  max-width: 30%;
+  padding: 5px;
+  border: 2px solid rgba(46,66,99,0.5);
+  margin: 10px;
 }
-.ekko-lightbox-nav-overlay a, .ekko-lightbox-nav-overlay a:visited, .ekko-lightbox-nav-overlay a:hover, .ekko-lightbox-nav-overlay a:active {
-  font-size:100pt;
-  /*color:#666;*/
-  color:rgb(220,105,94);
-  text-decoration:none;
+.ekko-lightbox-nav-overlay a, .ekko-lightbox-nav-overlay a: visited, .ekko-lightbox-nav-overlay a: hover, .ekko-lightbox-nav-overlay a: active {
+  font-size: 100pt;
+  /*color: #666;*/
+  color: rgb(220,105,94);
+  text-decoration: none;
 }
 
 
 /*contact form*/
 textarea {
-  resize:none;
-  width:100%;
-  height:240px;
+  resize: none;
+  width: 100%;
+  height: 240px;
 }
 
 /*footer*/
 footer {
   text-align: center;
-  font-weight:bold;
+  font-weight: bold;
 }
 
 
 i.far, i.fab {
   font-size: 30pt;
-  background:rgba(255,255,255,0.5);
-  color:rgb(46,66,99)
+  background: rgba(255,255,255,0.5);
+  color: rgb(46,66,99)
 }
-i.far:hover, i.fab:hover {
+i.far: hover, i.fab: hover {
   color: #E7955D;
 }
